feat: Add Actuator and Swagger for observability and docs

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,3 +41,12 @@ logging:
   level:
     com.demo.scheduler: INFO
     org.springframework.data.redis: WARN
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics,prometheus
+  endpoint:
+    health:
+      show-details: always
